--- a/.classpath
+++ b/.classpath
@@ -25,7 +25,9 @@
 	<classpathentry kind="lib" path="lib/axis-1_4/lib/axis.jar"/>
 	<classpathentry kind="lib" path="lib/axis-1_4/lib/jaxrpc.jar"/>
 	<classpathentry kind="lib" path="lib/axis-1_4/lib/commons-discovery-0.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-cli-1.2/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.2/commons-cli-1.2.jar" sourcepath="/Users/peter/.m2/repository/commons-cli/commons-cli/1.2/commons-cli-1.2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jogl/jogl-1.1.1-rc8-linux-i586/lib/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="lib/jogl/jogl-1.1.1-rc8-linux-i586/lib/jogl.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LibGKD"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/peter-ar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/peter-dwarf"/>
