--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,10 @@
   		<artifactId>commons-io</artifactId>
   		<version>1.3.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.apple</groupId>
+  		<artifactId>AppleJavaExtensions</artifactId>
+  		<version>1.4</version>
+  	</dependency>
   </dependencies>
 </project>
