--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,6 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>commons-cli</groupId>
-  		<artifactId>commons-cli</artifactId>
-  		<version>20040117.000000</version>
-  	</dependency>
-  	<dependency>
   		<groupId>jfree</groupId>
   		<artifactId>jfreechart</artifactId>
   		<version>1.0.13</version>
@@ -91,11 +86,6 @@
   		<version>1.4.4</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-io</artifactId>
-  		<version>1.3.2</version>
-  	</dependency>
-  	<dependency>
   		<groupId>com.apple</groupId>
   		<artifactId>AppleJavaExtensions</artifactId>
   		<version>1.4</version>
@@ -124,6 +114,16 @@
   		<groupId>com.peter</groupId>
   		<artifactId>peter-swing</artifactId>
   		<version>20130429</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.2</version>
   	</dependency>
   </dependencies>
 </project>
