--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,6 @@
 			<version>20130717</version>
 		</dependency>
 		<dependency>
-			<groupId>com.peter</groupId>
-			<artifactId>peter-swing</artifactId>
-			<version>20130717</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
@@ -137,6 +132,16 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.peter</groupId>
+			<artifactId>peter-swing</artifactId>
+			<version>20130814</version>
+		</dependency>
+		<dependency>
+			<groupId>com.peter</groupId>
+			<artifactId>tightvncpanel</artifactId>
+			<version>20130717</version>
 		</dependency>
 	</dependencies>
 </project>
