--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #log4j.rootLogger = [ level ] , appenderName, appenderName, ...
-log4j.rootLogger = INFO, console, FILE
+log4j.rootLogger = DEBUG, console, FILE
 
 #log4j.logger.com.gkd.stub.BochsStub=OFF
 
