--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
 			<artifactId>tightvncpanel</artifactId>
 			<version>20140701</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 	<scm>
 		<url>scm:svn:svn://210.5.164.14/GKD</url>
