--- a/instrument/Makefile
+++ b/instrument/Makefile
@@ -28,7 +28,7 @@ SHELL = /bin/bash
 CC = gcc
 CFLAGS = -g -O2 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -pthread
 CXX = g++
-CXXFLAGS = -O3 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -pthread
+CXXFLAGS = -g -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -pthread
 
 LDFLAGS = 
 LIBS = 
