--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,11 @@
 			<artifactId>jgraphx</artifactId>
 			<version>2.3.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.185</version>
+		</dependency>
 	</dependencies>
 	<scm>
 		<url>scm:svn:svn://210.5.164.14/GKD</url>
