ready to move to h2 database instead of using jmpDataVector

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,3 +12,5 @@ log4j.appender.FILE = org.apache.log4j.FileAppender
 log4j.appender.FILE.file= gkd.log
 log4j.appender.FILE.layout = org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern = [%p] [%d{HH:mm:ss,SSS}] [%F:%L]\t %m%n
+
+log4j.logger.org.hibernate=info
