--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,16 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.185</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.8.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.9</version>
+		</dependency>
 	</dependencies>
 	<scm>
 		<url>scm:svn:svn://210.5.164.14/GKD</url>
