--- a/instrument/Makefile
+++ b/instrument/Makefile
@@ -21,14 +21,14 @@
 srcdir = .
 
 
-SHELL = /bin/bash
+SHELL = /bin/sh
 
 
 
 CC = gcc
-CFLAGS = -g -O2 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -pthread
+CFLAGS =  -fpascal-strings -fno-common -Wno-four-char-constants -Wno-unknown-pragmas -Dmacintosh -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES 
 CXX = g++
-CXXFLAGS = -O3 -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES -pthread
+CXXFLAGS = -O3 -fpascal-strings -fno-common -Wno-four-char-constants -Wno-unknown-pragmas -Dmacintosh -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES 
 
 LDFLAGS = 
 LIBS = 
