--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.9</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
 	</dependencies>
 	<scm>
 		<url>scm:svn:svn://210.5.164.14/GKD</url>
