--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,4 +13,5 @@ log4j.appender.FILE.file= gkd.log
 log4j.appender.FILE.layout = org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern = [%p] [%d{HH:mm:ss,SSS}] [%F:%L]\t %m%n
 
-log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate=OFF
+log4j.logger.com.glavsoft=OFF
