--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,12 +3,12 @@ log4j.rootLogger = DEBUG, console, FILE
 
 #log4j.logger.com.gkd.stub.BochsStub=OFF
 
-
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = [%p] [%d{HH:mm:ss,SSS}] [%F:%L]\t %m%n
 
 log4j.appender.FILE = org.apache.log4j.FileAppender
+log4j.appender.FILE.file.append=true
 log4j.appender.FILE.file= gkd.log
 log4j.appender.FILE.layout = org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern = [%p] [%d{HH:mm:ss,SSS}] [%F:%L]\t %m%n
