--- a/instrument/Makefile
+++ b/instrument/Makefile
@@ -26,9 +26,9 @@ SHELL = /bin/sh
 
 
 CC = gcc
-CFLAGS = -O3 -fpascal-strings -fno-common -Wno-four-char-constants -Wno-unknown-pragmas -Dmacintosh -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES 
+CFLAGS =  -fpascal-strings -fno-common -Wno-four-char-constants -Wno-unknown-pragmas -Dmacintosh -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES 
 CXX = g++
-CXXFLAGS = -O3 -fpascal-strings -fno-common -Wno-four-char-constants -Wno-unknown-pragmas -Dmacintosh -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES 
+CXXFLAGS = -O3 -g -fpascal-strings -fno-common -Wno-four-char-constants -Wno-unknown-pragmas -Dmacintosh -D_FILE_OFFSET_BITS=64 -D_LARGE_FILES 
 
 LDFLAGS = 
 LIBS = 
